<resources>
    <string name="app_name">app_senior_calculator</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_divi">÷</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="binario">Binario</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="signoIgual">=</string>
    <string name="signoMulti">×</string>
    <string name="signoDecimal">.</string>
    <string name="signoMenos">-</string>
    <string name="_1">1</string>
    <string name="SignoSuma">+</string>
    <string name="_5">5</string>
    <string name="btnBorrar">AC</string>
    <string name="hola_mundo_de_yo">hola mundo de yo</string>
</resources>