<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/interfazCalculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edText_numero"
        android:layout_width="336dp"
        android:layout_height="99dp"
        android:autofillHints=""
        android:backgroundTint="#373737"
        android:ems="10"
        android:enabled="false"
        android:inputType="text|numberDecimal"
        android:shadowColor="#FFFFFF"
        android:textAlignment="textEnd"
        android:textColor="#00FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="68sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnNum7"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOn"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNum1"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum4"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNum8"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_8"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/btnNum7"
        app:layout_constraintTop_toBottomOf="@+id/btnOff"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNum5"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/btnNum4"
        app:layout_constraintTop_toBottomOf="@+id/btnNum8"
        app:layout_constraintVertical_bias="0.049"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNum0"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum2"
        app:layout_constraintVertical_bias="0.092"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNum2"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/btnNum4"
        app:layout_constraintTop_toBottomOf="@+id/btnNum5"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNum4"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum7"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnBin"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:backgroundTint="#5A5959"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/binario"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum0"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/btnHexa"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:backgroundTint="#5A5959"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/hexadecimal"
        android:textAlignment="center"
        android:textSize="17.5sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum0"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/btnOn"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#5A5959"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/on"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edText_numero"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/btnOff"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#5A5959"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/off"
        android:textAlignment="center"
        android:textSize="21.1sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/btnOn"
        app:layout_constraintTop_toBottomOf="@+id/edText_numero"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#5A5959"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btnBorrar"
        android:textAlignment="center"
        android:textSize="25.6sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toEndOf="@+id/btnOff"
        app:layout_constraintTop_toBottomOf="@+id/edText_numero"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/btnNum3"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toEndOf="@+id/btnNum5"
        app:layout_constraintTop_toBottomOf="@+id/btnNum6"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRes"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signoMenos"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toEndOf="@+id/btnNum3"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnNum9"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_9"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toEndOf="@+id/btnNum8"
        app:layout_constraintTop_toBottomOf="@+id/btnOff"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-medium"
        android:text="@string/SignoSuma"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toEndOf="@+id/btnDecimal"
        app:layout_constraintTop_toBottomOf="@+id/btnRes"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signoMulti"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toEndOf="@+id/btnNum9"
        app:layout_constraintTop_toBottomOf="@+id/btnDivi"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnResult"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signoIgual"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toEndOf="@+id/btnDecimal"
        app:layout_constraintTop_toBottomOf="@+id/btnSum"
        app:layout_constraintVertical_bias="0.097" />

    <Button
        android:id="@+id/btnDivi"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_divi"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toEndOf="@+id/btnBorrar"
        app:layout_constraintTop_toBottomOf="@+id/edText_numero"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnNum6"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_6"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/btnNum5"
        app:layout_constraintTop_toBottomOf="@+id/btnNum9"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnDecimal"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:backgroundTint="#9C9A9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signoDecimal"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toEndOf="@+id/btnNum0"
        app:layout_constraintTop_toBottomOf="@+id/btnNum3"
        app:layout_constraintVertical_bias="0.097"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>